exports[`CreateOrUpdateReplyConnectionFeedback creates feedback on given reply connection 1`] = `
Object {
  "CreateOrUpdateReplyConnectionFeedback": Object {
    "feedbackCount": 2,
  },
}
`;

exports[`CreateOrUpdateReplyConnectionFeedback creates feedback on given reply connection 2`] = `
Object {
  "createdAt": "2017-01-28T08:45:57.011Z",
  "from": "test",
  "score": 1,
  "updatedAt": "2017-01-28T08:45:57.011Z",
  "userId": "test",
}
`;

exports[`CreateOrUpdateReplyConnectionFeedback updates existing feedback 1`] = `
Object {
  "CreateOrUpdateReplyConnectionFeedback": Object {
    "feedbackCount": 1,
  },
}
`;

exports[`CreateOrUpdateReplyConnectionFeedback updates existing feedback 2`] = `
Object {
  "_id": "createReplyConnectionFeedback1__testUser__testClient",
  "_index": "replyconnectionfeedbacks",
  "_source": Object {
    "createdAt": "2017-01-28T08:45:57.011Z",
    "from": "testClient",
    "score": -1,
    "updatedAt": "2017-01-28T08:45:57.011Z",
    "userId": "testUser",
  },
  "_type": "basic",
  "_version": 2,
  "found": true,
}
`;
